Updated WebSite Title

--- a/Website/Website.html
+++ b/Website/Website.html
@@ -12,7 +12,7 @@
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinyColorPicker/1.1.1/jqColorPicker.min.js"></script>
 
-    <title>RGB WiFi Lamp</title>
+    <title>Arc Lamp</title>
     <script>
         var websock;
         var reconnectTimer;
